--- a/pom.xml
+++ b/pom.xml
@@ -2,12 +2,12 @@
 
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.eisenvault</groupId>
-    <artifactId>ev-aikau-auditreport</artifactId>
+    <artifactId>aikau-auditreport</artifactId>
     <version>1.1.0</version>
     <packaging>pom</packaging>
 
     <name>Aikau Audit Report</name>
-    <description>EisenVault's Audit Report built using AIKAU framework</description>
+    <description>Audit Report built using AIKAU framework</description>
 
     <licenses>
         <license>
